--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
  <img src="" alt="vlogo">
  </a>   
 
+ <section class="filling">
+<div class="container filling-container"></div>
+ </section>
    </div> 
  </header>   
  <main>
